# HandBrake

./: .cspell  .flake8  .gitignore  .prettierrc  HandBrake.py  __main__.py  config.ini  logger.ini  output.csv  pyproject.toml  requirements.txt  setup.py
config/: config.ini
firmware/: handbrake.ino
firmware/handbrake/: handbrake.ino
src/handbrake/main/: app.py
